# pyar

./: .gitignore  README.md  generate_aruco_markers.py  opencv_ar_image.py  opencv_ar_live.py  pyproject.toml  requirements.txt
